--- a/Project02-Concentration.ipynb
+++ b/Project02-Concentration.ipynb
@@ -521,7 +521,7 @@
     "# Create a histogram of 'value'\n",
     "plt.hist(value, bins=150, density=True, alpha = 0.5)\n",
     "\n",
-    "# Overlay a KDE using Seaborn with a specified bandwidth\n",
+    "#This code is just for myself, not on the plot\n",
     "#sns.kdeplot(value, label='Density Line', bw_method=0.25)\n",
     "\n",
     "# Create a range of values for the x-axis of the standard normal\n",
@@ -601,7 +601,7 @@
     "\n",
     "plt.hist(value2, np.unique(value2), density=True, alpha = 0.5)\n",
     "\n",
-    "# Overlay a KDE using Seaborn with a specified bandwidth\n",
+    "#This code is just for myself, not on the plot\n",
     "#sns.kdeplot(value2, label='Density Line', bw_method=0.25)\n",
     "\n",
     "# Create a range of values for the x-axis of the standard normal\n",
@@ -655,7 +655,7 @@
     "\n",
     "Please include a list of the students you work with along this project (including yourself). Include both names and GitHub usernames of the people you collaborated with. Maximum of three persons per group. \n",
     "- Member No1: Julia Verdickt (juliaverdickt)\n",
-    "- Member No2: \n",
+    "- Member No2: Alissa Gordon (alissagordon)\n",
     "- Member No3:"
    ]
   },
